added project folders and created basic structure

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
     <head>
         <title>Macs</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>Hello World!</p>
+        <h1>Mac's Stuff</h1>
+        <p>Host for my handmade web</p>
+        <ul>
+            <li><a href="">journals</a></li>
+            <li><a href="passion-site/index.html">p4ssi0n</a></li>
+        </ul>
+        <p>!website under construction!</p>
     </body>
 </html>
