--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <title>Macs</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="favicon3.png">
     </head>
     <body>
         <h1>Mac's Stuff</h1>
         <p>Host for my handmade web</p>
         <ul>
-            <li><a href="">journals</a></li>
+            <li><a href="journals/index.html">journals</a></li>
             <li><a href="passion-site/index.html">p4ssi0n</a></li>
         </ul>
         <p>!website under construction!</p>
