--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="journals/index.html">journals</a></li>
             <li><a href="passion-site/index.html">p4ssi0n</a></li>
         </ul>
+        <div align= center </div>
         <p>!website under construction!</p>
     </body>
 </html>
