dirt second to last

--- a/passion-site 2/pages/home.html
+++ b/passion-site 2/pages/home.html
@@ -1,23 +1,16 @@
 <!doctype html>
 <html>
     <div align= center </div>
-    <head>Dirt3.com <small>The Official Website for Dirt</small>
-        <link rel="stylesheet" href="stylethree.css">
-    </head>
+    <head>Dirt3.com <small>The Official Shop for Dirt</small></head>
     
 <div align= center </div>
 <strong>WELCOME</strong>
-
-<body>
-<p>Some of the best things about dirt:</p>
+<p></p>
 <ol>
     <li>Clumps</li>
     <li>Brown</li>
     <li>Everywhere</li>
 </ol>
-
-
 <p> Home <a look href="../index.html"> here</a>
 </p>
-</body>
 </html>
