--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         <p>Host for my handmade web</p>
         <ul>
             <li><a href="journals/index.html">journals</a></li>
-            <li><a href="passion-site/index.html">p4ssi0n (take the portal at the bottom right corner of the p4ssi0n front page to switch to the alternate universe version of the site)</a></li>
+            <li><a href="passion-site/index.html">p4ssi0n</a><p>(take the portal at the bottom right corner of the p4ssi0n front page to switch to the alternate universe version of the site)</p></li>
         </ul>
         <div align= center </div>
+            <br>
         <p>!website under construction!</p>
     </body>
 </html>
