--- a/passion-site/pages/home.html
+++ b/passion-site/pages/home.html
@@ -1,23 +1,53 @@
 <!doctype html>
 <html>
-    <div align= center </div>
-    <head>Dirt3.com <small>The Official Website for Dirt</small>
+    
+    <div align=center <head>Dirt3.com <small>The Official Website for Dirt</small> </div>
         <link rel="stylesheet" href="stylethree.css">
     </head>
     
-<div align= center </div>
-<strong>WELCOME</strong>
+<br>
+
+<div align= center <strong>WELCOME</strong> </div>
 
 <body>
 <p>Some of the best things about dirt:</p>
-<ol>
+
+<div class="list"><ol>
     <li>Clumps</li>
     <li>Brown</li>
     <li>Everywhere</li>
 </ol>
+</div>
+<br>
+<div class="box fixed">BONUS INFO The six main groups of soil(dirt) are: clay, sandy, silty, peaty, chalky, and loamy. </div>
+<p></p>
+
+<div class="box"> Dirt From Road A/B</div>
+<br>
+<label for="disk_c">Votes for A:</label>
+<meter id="disk_c" value="2" min="0" max="10">2 out of 10</meter><br>
+
+<label for="disk_d">Votes for B:</label>
+<meter id="disk_d" value="0.6">60%</meter>
+
+<div style="grass"><img src="../images/grass.png" width="30" height="40"; background-repeat:repeat-y <p> Hii! I voted for B because I thought it just seemed like a better option because I usually like side profiles and because birds eye view pictures scare me because I am afraid of heights but I know that doesn’t really apply to this one because usually every time we see dirt it is kind of from a birds eye view.</p></div>
+
+<div style="grass"><img src="../images/4.png" width="30" height="40"; background-repeat:repeat-y <p> I didn’t know what we were voting for so I voted for the underdog.</p></div>
+
+<div style="grass"><img src="../images/boxes.png" width="30" height="40"; background-repeat:repeat-y <p> When I vote on things like dirt, I usually take some time… a few days… and this time I had a dream that I was in a voting booth for what I thought was class president… but when I got the ballot… dirt A and B were on it just like they are on the website here… I was nervous and some guy kept banging on the door to the booth… he was yelling “Vote dirt A!” over and over… I did it out of fear… So when I woke up I voted dirt B in spite of my dream pressureer </p> </div>
+
+<div style="grass"><img src="../images/stars.png" width="30" height="40"; background-repeat:repeat-y <p> If I got to vote again, I would change to A. I just think after pulling the trigger on B was a bad choice. I kept looking at it and I think there is more going on in A. There is something special about it</p></div>
 
 
-<p> Home <a look href="../index.html"> here</a>
-</p>
+<div style="grass"><img src="../images/star.png" width="30" height="40"; background-repeat:repeat-y <p> I didn’t vote. Or it wasn’t me who voted!! My little brother took my computer and voted for me. Ugh. </p></div>
+
+
+<div style="grass"><img src="../images/hearts.png" width="30" height="40"; background-repeat:repeat-y <p> I really hope they open back up voting : 0 I told some friends about it and I think that A has a shot because my friends like birds eye view stuff @grassprofilepicperson </p></div>
+
+
+<br>
+
+<div class="home"><p> Home <a look href="../index.html"> here</a>
+</p></div>
 </body>
 </html>
