--- a/passion-site/pages/home.html
+++ b/passion-site/pages/home.html
@@ -19,8 +19,9 @@
 </ol>
 </div>
 <br>
-<div class="box fixed">BONUS INFO The six main groups of soil(dirt) are: clay, sandy, silty, peaty, chalky, and loamy. </div>
-<p></p>
+<div class="box fixed">BONUS INFO <p>The six main groups of soil(dirt) are: clay, sandy, silty, peaty, chalky, and loamy.</p><br><p>-----------------------------------------------------------------</p><p></p> incoming information</p></div>
+<h1>PLEASE VOTE BELOW</h1>
+<p>Voting closes in 2 weeks so make sure you get your vote in.</p>
 
 <div class="box"> Dirt From Road A/B</div>
 <br>
@@ -29,6 +30,10 @@
 
 <label for="disk_d">Votes for B:</label>
 <meter id="disk_d" value="0.6">60%</meter>
+<br>
+<br>
+<br>
+<small>Comments Section</small>
 
 <div style="grass"><img src="../images/grass.png" width="30" height="40"; background-repeat:repeat-y <p> Hii! I voted for B because I thought it just seemed like a better option because I usually like side profiles and because birds eye view pictures scare me because I am afraid of heights but I know that doesn’t really apply to this one because usually every time we see dirt it is kind of from a birds eye view.</p></div>
 
