--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="journals/index.html">journals</a></li>
             <li><a href="passion-site/index.html">p4ssi0n</a><p>(take the portal at the bottom right corner of the p4ssi0n front page to switch to the alternate universe version of the site)</p></li>
+            <LI><a href="structure/index.html">strvctvre</a></LI>
         </ul>
         <div align= center </div>
             <br>
