--- a/structure/pages/hit.html
+++ b/structure/pages/hit.html
@@ -7,7 +7,7 @@
 <body>
    
 
-    <a href="../pages/lake.html">
+    <a href="../index.html">
         <div class="caveinside"><img src="../images/treehit.png" width="1500px" height="900px"</div>
         </a>
 
