--- a/index.html
+++ b/index.html
@@ -5,16 +5,33 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="favicon3.png">
     </head>
-    <body>
+    <div class="head">
         <h1>Mac's Stuff</h1>
-        <p>Host for my handmade web</p>
+    <h2>----------------------></h2>
+    <h2>--------------------></h2>
+    <h2>-------------------------></h2>
+    <h2>--------------></h2>
+    <h2>-------------------></h2>
+    <h2>---------------------></h2>
+    <p>!website under construction!</p>
+    <h2>-------------------------></h2>
+    <h2>--------------------></h2>
+    <h2>-----------------------------></h2>
+    <h2>--------------------------------></h2>
+    <h2>------------------></h2>
+    <h2>-----------------------></h2>
+    <h2>----------------------></h2>
+    </div>
+    <body>
+        
         <ul>
             <li><a href="journals/index.html">journals</a></li>
             <li><a href="passion-site/index.html">p4ssi0n</a><p>(take the portal at the bottom right corner of the p4ssi0n front page to switch to the alternate universe version of the site)</p></li>
             <LI><a href="structure/index.html">strvctvre</a></LI>
         </ul>
-        <div align= center </div>
-            <br>
-        <p>!website under construction!</p>
     </body>
+    <div align= center </div>
+        <br>
+   
+
 </html>
