--- a/structure/pages/lake.html
+++ b/structure/pages/lake.html
@@ -7,7 +7,7 @@
 <body>
    
 
-    <a href="../pages/indexcave.html">
+    <a href="../pages/underwater.html">
         <div class="caveinside"><img src="../images/lake.png" width="1500px" height="900px"</div>
         </a>
 
