--- a/structure/pages/space.html
+++ b/structure/pages/space.html
@@ -5,13 +5,11 @@
     <link rel="stylesheet" href="../pages/style2.css">
 </head>
 <body>
-   
-
-    <a href="../pages/lake.html">
-        <div class="caveinside"><img src="../images/byeworld.png" width="1500px" height="900px"</div>
-        </a>
-
- 
     
+        <div class="caveinside"><img src="../images/byeworld.png" width="1500px" height="900px"</div>
+        
+        <a href="../index.html">
+        <div class="back"><img src="../images/back.gif" width="10px" height="10px"</div>
+        </a>
 </body>
 </html>
