--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <li><a href="journals/index.html">journals</a></li>
             <li><a href="passion-site/index.html">p4ssi0n</a><p>(take the portal at the bottom right corner of the p4ssi0n front page to switch to the alternate universe version of the site)</p></li>
             <LI><a href="structure/index.html">strvctvre</a></LI>
+            <LI><a href="screensaver/index.html">ScrenNsaveR</a></LI>
+
         </ul>
     </body>
     <div align= center </div>
