--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="passion-site/index.html">p4ssi0n</a><p>(take the portal at the bottom right corner of the p4ssi0n front page to switch to the alternate universe version of the site)</p></li>
             <LI><a href="structure/index.html">strvctvre</a></LI>
             <LI><a href="screensaver/index.html">ScrenNsaveR</a></LI>
+            <LI><a href="Accordian/index.html">AcCoRdIaN</a></LI>
 
         </ul>
     </body>
