--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <LI><a href="screensaver/index.html">ScrenNsaveR</a></LI>
             <br>
             <LI><a href="Accordian/index.html">AcCoRdIoN</a></LI>
+            <LI><a href="control/index.html">ctrl</a></LI>
 
         </ul>
     </body>
