--- a/index.html
+++ b/index.html
@@ -8,37 +8,33 @@
     </head>
     <div class="head">
         <h1>Mac's Stuff</h1>
-    <h2>----------------------></h2>
-    <h2>--------------------></h2>
-    <h2>-------------------------></h2>
-    <h2>--------------></h2>
-    <h2>-------------------></h2>
-    <h2>---------------------></h2>
+
     <p>!website under construction!</p>
-    <h2>-------------------------></h2>
-    <h2>--------------------></h2>
-    <h2>-----------------------------></h2>
-    <h2>--------------------------------></h2>
-    <h2>------------------></h2>
-    <h2>-----------------------></h2>
-    <h2>----------------------></h2>
+  
     
     </div>
     <body>
-        
+        <div class="contents">
         <ul>
             <li><a href="journals/index.html">journals</a></li>
             <br>
-            <li><a href="passion-site/index.html">p4ssi0n</a><p>(take the portal at the bottom right corner of the p4ssi0n front page to switch to the alternate universe version of the site)</p></li>
+            <li><a href="passion-site/index.html">p4ssi0n</a><p>(take the portal at the bottom right corner of the p4ssi0n front <br> page to switch to the alternate universe version of the site)</p></li>
             <br>
             <LI><a href="structure/index.html">strvctvre</a></LI>
             <br>
             <LI><a href="screensaver/index.html">ScrenNsaveR</a></LI>
             <br>
             <LI><a href="Accordian/index.html">AcCoRdIoN</a></LI>
+            <br>
             <LI><a href="control/index.html">ctrl</a></LI>
 
         </ul>
+        </div>
+
+        <div class="picture">&nbsp;
+            <p>[̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    [̲̅$̲̅(̲̅5̲̅)̲̅$̲̅][̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]    ]</p>
+        </div>
+
     </body>
     <div align= center </div>
         <br>
