--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
             <LI><a href="PESTSITE/index.html">PESTSITE</a></LI>
 
+            <LI><a href="final-project/FINAL SITE/index.html">PESTSITE</a></LI>
+
         </ul>
         </div>
 
