--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <LI><a href="PESTSITE/index.html">PESTSITE</a></LI>
 
-            <LI><a href="final-project/FINAL SITE/index.html">PESTSITE</a></LI>
+            <LI><a href="final-project/FINAL SITE/index.html">Finalsite</a></LI>
 
         </ul>
         </div>
