--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <LI><a href="PESTSITE/index.html">PESTSITE</a></LI>
 
-            <LI><a href="final-project/FINAL SITE/index.html">Finalsite</a></LI>
+            <LI><a href="FINAL SITE/index.html">Finalsite</a></LI>
 
         </ul>
         </div>
