--- a/FINAL SITE/light.html
+++ b/FINAL SITE/light.html
@@ -95,28 +95,28 @@
 
                 <FIGURE>
                     <IMG src="light/1-10.jpg"
-                    <FIGCAPTION>A view of York Minster from a side street.<br>
+                    <FIGCAPTION>An old pure outdoor beam 77% fluorescent warm<br>
                         <span style="color:#b50303">55 $</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                     </FIGURE>
                     <FIGURE>
                         <IMG src="light/1-40.jpg"
-                        <FIGCAPTION>A view of York Minster from a side street.<br>
+                        <FIGCAPTION>Natural beam <br>
                             <span style="color:#b50303">55 $</span>
                         </FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                         </FIGURE>
                         <FIGURE>
                             <IMG src="light/C3D59B25-FFF9-4D3C-89EA-AC961E0890BD.jpg"
-                            <FIGCAPTION>A view of York Minster from a side street.<br> <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                            <FIGCAPTION>Ave Maria KING SALE +99<br> <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                             </FIGURE>
                             <FIGURE>
                                 <IMG src="light/1-9.jpg"
-                                <FIGCAPTION>A view of York Minster from a side street.<br>
+                                <FIGCAPTION>Person caught——— <br>
                                     <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                 </FIGURE>
                                 
                                     <FIGURE>
                                         <IMG src="light/1-41.jpg"
-                                        <FIGCAPTION>A view of York Minster from a side street.<br>
+                                        <FIGCAPTION>Birdbeam natural<br>
                                             <span style="color:#b50303">55 $</span></FIGCAPTION>      <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                         </FIGURE>
                             
