--- a/FINAL SITE/misc.html
+++ b/FINAL SITE/misc.html
@@ -110,7 +110,7 @@
                             </FIGURE>
                             <FIGURE>
                                 <IMG src="misc/IMG_0765.JPG"
-                                <FIGCAPTION>Two four leaf clovers<br>
+                                <FIGCAPTION>Two FIVE leaf clovers<br>
                                     <span style="color:#b50303">55 $</span></FIGCAPTION>  <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                 </FIGURE>
                                 
@@ -128,7 +128,7 @@
                                             
                                                 <FIGURE>
                                                     <IMG src="misc/IMG_7063.jpeg"
-                                                    <FIGCAPTION>Very nice gift - Christmas 2019 - from grandma<br>
+                                                    <FIGCAPTION>Very nice gift - Christmas 2019 - <br>
                                                         <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                                     </FIGURE>
                                                     <FIGURE>
