--- a/FINAL SITE/shirts.html
+++ b/FINAL SITE/shirts.html
@@ -96,33 +96,33 @@
                 <FIGURE>
                     <IMG src="shirts/1-33.jpg"
                     <FIGCAPTION>Fancy shirt freshly sun dried <br>
-                        <span style="color:#b50303">55 $</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                        <span style="color:#b50303">€35.99</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                     </FIGURE>
                     <FIGURE>
                         <IMG src="shirts/1-34.jpg"
                         <FIGCAPTION>Multiple dress shirts 
                             <br>
-                            <span style="color:#b50303">55 $</span>
+                            <span style="color:#b50303">€50</span>
                         </FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                         </FIGURE>
                         <FIGURE>
                             <IMG src="shirts/1-35.jpg"
-                            <FIGCAPTION>Multiple dress shirts (2)<br> <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                            <FIGCAPTION>Multiple dress shirts (2)<br> <span style="color:#b50303">€50.25</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                             </FIGURE>
                             <FIGURE>
                                 <IMG src="shirts/1-36.jpg"
                                 <FIGCAPTION>White T-shirt sun dried<br>
-                                    <span style="color:#b50303">55 $</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                    <span style="color:#b50303">€10</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                 </FIGURE>
                                 <FIGURE>
                                     <IMG src="shirts/1-37.jpg"
                                     <FIGCAPTION>White T-shirt sun dried(2)<br>
-                                        <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                        <span style="color:#b50303">€10</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                     </FIGURE>
                                     <FIGURE>
                                         <IMG src="shirts/IMG_0309.JPG"
                                         <FIGCAPTION>Pattern shirt .<br>
-                                            <span style="color:#b50303">55 $</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                            <span style="color:#b50303">₿ .0002</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                         </FIGURE>
                             
                                             
