--- a/FINAL SITE/toys.html
+++ b/FINAL SITE/toys.html
@@ -96,23 +96,23 @@
                 <FIGURE>
                     <IMG src="kites/1-7.jpg"
                     <FIGCAPTION>Kite Spool- red <br>
-                        <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                        <span style="color:#b50303">$12.99</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                     </FIGURE>
                     <FIGURE>
                         <IMG src="kites/1-6.jpg"
                         <FIGCAPTION>Rocket very large<br>
-                            <span style="color:#b50303">55 $</span>
+                            <span style="color:#b50303">   ₿.2</span>
                         </FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                         </FIGURE>
                         <FIGURE>
                             <IMG src="kites/1-44.jpg"
                             <FIGCAPTION>Racquetball gear
-                                <br> <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                <br> <span style="color:#b50303">€9.99</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                             </FIGURE>
                             <FIGURE>
                                 <IMG src="kites/1-8.jpg"
                                 <FIGCAPTION>Yellow kite with duct tape repair<br>
-                                    <span style="color:#b50303">55 $</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                    <span style="color:#b50303">€20.99</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                 </FIGURE>
                             
                                             
