--- a/FINAL SITE/homes.html
+++ b/FINAL SITE/homes.html
@@ -96,37 +96,37 @@
                 <FIGURE>
                     <IMG src="homes/1-13.jpg"
                     <FIGCAPTION>Quiet Country home in remote location with no worry for loud sounds or noises<br>
-                        <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                        <span style="color:#b50303">€ 500.99</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                     </FIGURE>
                     <FIGURE>
                         <IMG src="homes/1-16.jpg"
                         <FIGCAPTION>Winter getaway for 2 weeks<br>
-                            <span style="color:#b50303">55 $</span>
+                            <span style="color:#b50303">$ 150</span>
                         </FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                         </FIGURE>
                         <FIGURE>
                             <IMG src="homes/1-17.jpg"
-                            <FIGCAPTION>Winter getaway 2 for 2 weeks <br> <span style="color:#b50303">55 $</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                            <FIGCAPTION>Winter getaway 2 for 2 weeks <br> <span style="color:#b50303">$200</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                             </FIGURE>
                             <FIGURE>
                                 <IMG src="homes/1-3.jpg"
                                 <FIGCAPTION>Luxury tent <br>
-                                    <span style="color:#b50303">55 $</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                    <span style="color:#b50303">₿.0009</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                 </FIGURE>
                                 <FIGURE>
                                     <IMG src="homes/home1.jpg"
                                     <FIGCAPTION>Model home in nice neighborhood<br>
-                                        <span style="color:#b50303">55 $</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                        <span style="color:#b50303">€ 1119.99</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                     </FIGURE>
                                     <FIGURE>
                                         <IMG src="homes/IMG_1807.JPG"
                                         <FIGCAPTION>Tent in wooded area<br>
-                                            <span style="color:#b50303">55 $</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                            <span style="color:#b50303">$10</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                         </FIGURE>
                                         <FIGURE>
                                             <IMG src="homes/IMG_1474.JPG"
                                             <FIGCAPTION>Mobile home<br>
-                                                <span style="color:#b50303">55 $</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                                <span style="color:#b50303">$220.99</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                             </FIGURE>
                                             
       </main>
