--- a/FINAL SITE/tires.html
+++ b/FINAL SITE/tires.html
@@ -96,28 +96,28 @@
                 <FIGURE>
                     <IMG src="tires/1-11.jpg"
                     <FIGCAPTION>White used car with only 55000 miles and new tires<br>
-                        <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                        <span style="color:#b50303">$1000</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                     </FIGURE>
                     <FIGURE>
                         <IMG src="tires/1-21.jpg"
                         <FIGCAPTION>Truckload of tires
                             <br>
-                            <span style="color:#b50303">55 $</span>
+                            <span style="color:#b50303">€119.99</span>
                         </FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                         </FIGURE>
                         <FIGURE>
                             <IMG src="tires/1.jpg"
                             <FIGCAPTION>Red car with nice interior <br>
-                                <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                <span style="color:#b50303">€210.99</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                             </FIGURE>
                         <FIGURE>
                             <IMG src="tires/1-22.jpg"
-                            <FIGCAPTION>Truckload of tires (2)<br> <span style="color:#b50303">55 $</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                            <FIGCAPTION>Truckload of tires (2)<br> <span style="color:#b50303">€210.99</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                             </FIGURE>
                             <FIGURE>
                                 <IMG src="tires/1-24.jpg"
                                 <FIGCAPTION>Party balloons for car <br>
-                                    <span style="color:#b50303">55 $</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                    <span style="color:#b50303">$20</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                 </FIGURE>
                                 
                           
