--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
             <LI><a href="FINAL SITE/index.html">Finalsite</a></LI>
 
+            <LI><a href="panovisonwebsite copy/home.html">Finalsite</a></LI>
+
         </ul>
         </div>
 
