--- a/panovisonwebsite copy/index2.html
+++ b/panovisonwebsite copy/index2.html
@@ -9,7 +9,7 @@
 
    <a href="index3.html" style = "color: white">
     <div class="this4">hiking</div>
-    <div class="hide">Gotta get outa the city. I really do because it is not even funny if I keep talking about wanting to go hiking in the woods.</div>
+    <div class="hide">Gotta get outa the city but not really. Just wanted to be like that. I really don't because it is not even funny if I keep talking about wanting to go hiking in the woods. Either way.</div>
    </a>
 
 <canvas id="canvas"></canvas>
