--- a/testsite/index2.html
+++ b/testsite/index2.html
@@ -34,7 +34,7 @@
 
 <div class="centered202">
     
-    <a href="goals.html"> goals
+    <a href="test.html"> enter
     </a>
    
  
@@ -64,6 +64,10 @@
  </div>
  </div>
  </a>
+
+
+
+
 
 
  <div class="centered-text100">
