--- a/testsite/money.html
+++ b/testsite/money.html
@@ -111,9 +111,17 @@
    
 </div>
 
-    <div class="gifs-container3">
-        <img src="images/4gif.gif" alt="GIF Description" width="700" height="100">
-    </div>
+
+<div class="container11">
+
+    <figure>
+            <a href="test.html">  <img src="images/yellow.png" style="width: 700px; height: 100px">   
+            </a> 
+            <a href="test.html"><figcaption>Home</figcaption></a>
+    
+        </figure>
+        
+           </div>
 
 
 
