--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <LI><a href="FINAL SITE/index.html">Finalsite</a></LI>
 
-            <LI><a href="jobsite copy/index2.html">jobsite</a></LI>
+            <LI><a href="testsite/index2.html">testsite</a></LI>
 
             <LI><a href="panovisonwebsite copy/home.html">Finalsite</a></LI>
 
