--- a/FINAL SITE/index.html
+++ b/FINAL SITE/index.html
@@ -18,7 +18,7 @@
     <div class="container1">
         <nav>
             Star Marketplace<br>
-           <em>Incognito Shopping</em>
+           <em></em>
         </nav>
 
         <div class="search-container">
@@ -118,7 +118,7 @@
 
                 <FIGURE>
                     <IMG src="featured/seeds.jpg"
-                    <FIGCAPTION>Quality dried horse feed seeds - Made in Italy - 500g<br>
+                    <FIGCAPTION>Quality dried horse feed seeds  - 500g<br>
                         <span style="color:#b50303">₿.029</span></FIGCAPTION>                 <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                     </FIGURE>
                     <FIGURE>
@@ -133,7 +133,7 @@
                             </FIGURE>
                             <FIGURE>
                                 <IMG src="featured/clovers.JPG"
-                                <FIGCAPTION>4 - 4 Leaf Clovers plucked in 2022. Book pressed. Climate controlled. Found in the northeastern American region. Center<br> <span style="color:#b50303">₿ 1</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                <FIGCAPTION>4 - 4 Leaf Clovers plucked in 2022.  Found in the northeast. Center<br> <span style="color:#b50303">₿ 1</span></FIGCAPTION>   <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                 </FIGURE>
                                 <FIGURE>
                                     <IMG src="featured/tofu.jpeg"
