--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <LI><a href="FINAL SITE/index.html">Finalsite</a></LI>
 
-            <LI><a href="test2/index2.html">testsite10ddd1</a></LI>
+            <LI><a href="finaltest/index2.html">testsite10ddd1</a></LI>
 
             <LI><a href="panovisonwebsite copy/home.html">Finalsite</a></LI>
 
