--- a/finaltest/test.html
+++ b/finaltest/test.html
@@ -14,7 +14,7 @@
 
 
     <div class="container1">
-      <a href="index2.html">  FOR LIFE FOR REAL 
+      <a href="index2.html">  FOR EVER FOR REAL 
      </a> 
     
     </div>
