--- a/FINAL SITE/buy.html
+++ b/FINAL SITE/buy.html
@@ -18,7 +18,7 @@
     <div class="container1">
         <nav>
             Star Marketplace<br>
-           <em>Incognito Shopping</em>
+           <em>Online/em>
         </nav>
 
         <div class="search-container">
