--- a/FINAL SITE/bush.html
+++ b/FINAL SITE/bush.html
@@ -18,7 +18,7 @@
     <div class="container1">
         <nav>
             Star Marketplace<br>
-           <em>Incognito Shopping</em>
+           <em>Online</em>
         </nav>
 
         <div class="search-container">
@@ -50,28 +50,27 @@
             <br>
             <a href="homes.html">Households</a>(7)
             <br>
-            <a href="tires.html">Car Parts (tires)</a>(5)
+            <a href="tires.html">Parts</a>(5)
             <br>
             <a href="toys.html">Toys</a>(4)
             <br>
             <a href="shirts.html">Shirts</a>(6)
             <br>
-            <a href="light.html">Beams of light</a>(5)
+            <a href="light.html">Beams</a>(5)
             <br>
             <a href="trees.html">Trees</a>(7)
             <br>
             <a href="singles.html">One Offs</a>(4)
             <br>
-            <a href="food.html">Edibles for some</a>(6)
+            <a href="food.html">Edible</a>(6)
             <br>
             <a href="classifieds.html">Classifieds</a>(3)
             <br>
-            <a href="forms.html">Analogous Forms</a>(4)
+            <a href="forms.html">Analogous</a>(4)
             <br>
             <a href="bed.html">Matresses</a>(3)
             <br>
             <a href="misc.html">Miscellaneous</a>(8)
-           
         </nav>
     </div>
 </div>
@@ -136,6 +135,16 @@
                                             <FIGCAPTION>New drapes <br>
                                                 <span style="color:#b50303">$17.99</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                             </FIGURE>
+                                            <FIGURE>
+                                                <IMG src="bushes/flowers.JPG"
+                                                <FIGCAPTION>flowers <br>
+                                                    <span style="color:#b50303">$10</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                                </FIGURE>
+                                                <FIGURE>
+                                                    <IMG src="bushes/dirt.JPG"
+                                                    <FIGCAPTION>dirt<br>
+                                                        <span style="color:#b50303">$5</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                                    </FIGURE>
                                             
       </main>
 </div>
