--- a/FINAL SITE/homes.html
+++ b/FINAL SITE/homes.html
@@ -18,7 +18,7 @@
     <div class="container1">
         <nav>
             Star Marketplace<br>
-           <em>Incognito Shopping</em>
+           <em>Online</em>
         </nav>
 
         <div class="search-container">
@@ -50,28 +50,27 @@
             <br>
             <a href="homes.html">Households</a>(7)
             <br>
-            <a href="tires.html">Car Parts (tires)</a>(5)
+            <a href="tires.html">Parts</a>(5)
             <br>
             <a href="toys.html">Toys</a>(4)
             <br>
             <a href="shirts.html">Shirts</a>(6)
             <br>
-            <a href="light.html">Beams of light</a>(5)
+            <a href="light.html">Beams</a>(5)
             <br>
             <a href="trees.html">Trees</a>(7)
             <br>
             <a href="singles.html">One Offs</a>(4)
             <br>
-            <a href="food.html">Edibles for some</a>(6)
+            <a href="food.html">Edible</a>(6)
             <br>
             <a href="classifieds.html">Classifieds</a>(3)
             <br>
-            <a href="forms.html">Analogous Forms</a>(4)
+            <a href="forms.html">Analogous</a>(4)
             <br>
             <a href="bed.html">Matresses</a>(3)
             <br>
             <a href="misc.html">Miscellaneous</a>(8)
-           
         </nav>
     </div>
 </div>
@@ -95,7 +94,7 @@
 
                 <FIGURE>
                     <IMG src="homes/1-13.jpg"
-                    <FIGCAPTION>Quiet Country home in remote location with no worry for loud sounds or noises<br>
+                    <FIGCAPTION>Quiet Country home in remote location <br>
                         <span style="color:#b50303">€ 500.99</span></FIGCAPTION>    <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                     </FIGURE>
                     <FIGURE>
@@ -128,6 +127,26 @@
                                             <FIGCAPTION>Mobile home<br>
                                                 <span style="color:#b50303">$220.99</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
                                             </FIGURE>
+                                            <FIGURE>
+                                                <IMG src="homes/fam.JPG"
+                                                <FIGCAPTION>White House<br>
+                                                    <span style="color:#b50303">$220,000</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                                </FIGURE>
+                                                <FIGURE>
+                                                    <IMG src="homes/far.JPG"
+                                                    <FIGCAPTION>Single Home<br>
+                                                        <span style="color:#b50303">50k</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                                    </FIGURE>
+                                                    <FIGURE>
+                                                        <IMG src="homes/mansion.JPG"
+                                                        <FIGCAPTION>Giant House With Gate<br>
+                                                            <span style="color:#b50303">5M</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                                        </FIGURE>
+                                                        <FIGURE>
+                                                            <IMG src="homes/train.png"
+                                                            <FIGCAPTION>House near the trains<br>
+                                                                <span style="color:#b50303">$100,000</span></FIGCAPTION>     <button onclick="window.open('buy.html');" target="_blank"> BUY </button>
+                                                            </FIGURE>
                                             
       </main>
 </div>
