--- a/FINAL SITE/index.html
+++ b/FINAL SITE/index.html
@@ -15,10 +15,10 @@
     <div class="banner">
         <img id="banner" src="Images/title.png" height="100px" width="100px"></img>
     </div>
-    <div class="container1">
+    <div id="links" class="container1">
         <nav>
-            Star Marketplace<br>
-           <em>Online</em>
+            event calender<br>
+           <em> <a href="index.html">S</a> <a href="index.html">M</a> <a href="index.html">T</a> <a href="index.html">W</a> <a href="index.html">T</a> <a href="index.html">F</a> <a href="index.html">S</a> </em>
         </nav>
 
         <div class="search-container">
@@ -30,6 +30,12 @@
         </div>
     </div>
 </div>
+
+
+
+
+
+
 
 <div class="menue">
 <p> <a class="toplink" href="index.html">Home </a> | <a class="toplink"  href="Messages">Messages </a> | <a class="toplink"  href="Orders">Orders </a></p><hr class="solid">
