--- a/FINAL SITE/index.html
+++ b/FINAL SITE/index.html
@@ -15,6 +15,13 @@
     <div class="banner">
         <img id="banner" src="Images/title.png" height="100px" width="100px"></img>
     </div>
+
+    <div class="fixed-header2">
+        <div class="banner2">
+            <img id="banner2" src="onlineshop.png" height="100px" width="600px"></img>
+        </div>
+
+
     <div id="links" class="container1">
         <nav>
             event calender<br>
@@ -83,11 +90,7 @@
         <div class="container3">
             <nav>
                 <br>
-                RATES<hr class="solid">
-                USD             $ 192.99<hr class="solid">
-                EUR             € 19.99<hr class="solid">
-                BTC             ₿ 19.99
-    
+                <img src="buy.gif" height="100px" width="100px"></img>
             </nav>
         </div>
     </div>
