--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
             <LI><a href="panovisonwebsite copy/home.html">Finalsite</a></LI>
 
+            <LI><a href="7000BOMBS/index.html">Joshtest</a></LI>
+
         </ul>
         </div>
 
