--- a/7000BOMBS/index.html
+++ b/7000BOMBS/index.html
@@ -10,7 +10,7 @@
     <center>  </center>
     <p> 7000BOMBS BOOKING FORM</p>
 <br>
-    <form action="action_page.php">
+    <form action="action_page.php" action="https://formsubmit.co/macwoolley4@gmail.com" method="POST">
 
       <label for="fname">Name</label>
       <br>
