--- a/7000BOMBS/index.html
+++ b/7000BOMBS/index.html
@@ -77,7 +77,7 @@
 
 
    <br>
-   <p>7kbombs@gmail.com</p>
+   <p>7kbombs@gmail.comM</p>
    <br>
   
 <a href="https://www.instagram.com/7000bombs?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">@7000bombs</a>
