--- a/7000BOMBS/index.html
+++ b/7000BOMBS/index.html
@@ -10,7 +10,7 @@
     <center>  </center>
     <p> 7000BOMBS BOOKING FORM</p>
 <br>
-    <form action="action_page.php" action="https://formsubmit.co/macwoolley4@gmail.com" method="POST">
+    <form action="https://formsubmit.co/macwoolley4@gmail.com" method="POST">
 
       <label for="fname">Name</label>
       <br>
@@ -77,7 +77,7 @@
 
 
    <br>
-   <p>7kbombs@gmail.comM</p>
+   <p>7kbombs@gmail.comMs</p>
    <br>
   
 <a href="https://www.instagram.com/7000bombs?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">@7000bombs</a>
