--- a/7000BOMBS/index.html
+++ b/7000BOMBS/index.html
@@ -10,7 +10,9 @@
     <center>  </center>
     <p> 7000BOMBS BOOKING FORM</p>
 <br>
-    <form action="https://formsubmit.co/3edf157644c2dffba1ae76e137bead6b" method="POST">
+    <form action="https://api.web3forms.com/submit" method="POST">
+        <input type="hidden" name="access_key" value="6c9e4a56-1966-4d1c-84c9-5a2633116ca9">
+        <input type="hidden" name="apikey" value="6c9e4a56-1966-4d1c-84c9-5a2633116ca9">
 
       <label for="fname">Name</label>
       <br>
